--- a/History
+++ b/History
@@ -1,3 +1,7 @@
+== 0.1.3 2009-06-22
+* 1 minor patch
+  * Parsing a text node with attributes stores them in the attributes method (tamalw)
+
 == 0.1.2 2009-04-21
 * 2 minor patches
   * Correct unnormalization of attribute values (der-flo)
