--- a/History
+++ b/History
@@ -1,6 +1,6 @@
 == 0.1.3 2009-06-22
 * 1 minor patch
-  * Parsing a text node with attributes stores them in the attributes method (tamalw)
+  * Calling Crack::XML.parse(xml, :explicit) will include text and attribute combo nodes as arrays (tamalw)
 
 == 0.1.2 2009-04-21
 * 2 minor patches
